stDemoOne/force-app/main/default/objects/FundingAward/fields/Awardee_Name__c.field-meta.xml
<CustomField>
    <fullName>Awardee_Name__c</fullName>
    <formula>IndividualApplication.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awardee Name</label>
    <type>Text</type>
</CustomField>