stDemoOne/force-app/main/default/objects/FundingAward/fields/gps_Available_for_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>gps_Available_for_Disbursement__c</fullName>
    <formula>Amount - gps_Unpaid_Disbursements__c - gps_Paid_Disbursements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available for Disbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>