stDemoOne/force-app/main/default/objects/FundingAward/fields/gps_Awarded_Amount__c.field-meta.xml
<CustomField>
    <fullName>gps_Awarded_Amount__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awarded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>