stDemoOne/force-app/main/default/objects/FundingAward/fields/gps_ContractDescription__c.field-meta.xml
<CustomField>
    <fullName>gps_ContractDescription__c</fullName>
    <formula>&quot;Contract details for &quot; &amp; Name &amp; &quot; under &quot; &amp;  FundingOpportunity.Name</formula>
    <label>Contract Description</label>
    <type>Text</type>
</CustomField>