stDemoOne/force-app/main/default/objects/FundingAward/fields/gps_ContractName__c.field-meta.xml
<CustomField>
    <fullName>gps_ContractName__c</fullName>
    <formula>left(Name &amp; &quot; under &quot; &amp;  FundingOpportunity.Name,80)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Name</label>
    <type>Text</type>
</CustomField>