stDemoOne/force-app/main/default/objects/FundingAward/fields/gps_Total_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>gps_Total_Cancelled__c</fullName>
    <label>Total Cancelled</label>
    <summarizedField>FundingDisbursement.Amount</summarizedField>
    <summaryFilterItems>
        <field>FundingDisbursement.Status</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingDisbursement.FundingAwardId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>