stDemoOne/force-app/main/default/objects/FundingAward/fields/gps_Unpaid_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>gps_Unpaid_Disbursements__c</fullName>
    <label>Unpaid Disbursements</label>
    <summarizedField>FundingDisbursement.Amount</summarizedField>
    <summaryFilterItems>
        <field>FundingDisbursement.Status</field>
        <operation>notEqual</operation>
        <value>Paid, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingDisbursement.FundingAwardId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>